fix: error when doing chunky